index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>App Archive by Moritz</title>
+  <title>Piquedeux App Archive</title>
 
 <style>
+
+body {
+font-family: serif;
+}
+
+a {
+color: black;
+}
+
 .subfolder {
     display: none; 
     list-style: none;
@@ -32,7 +41,7 @@
 <body>
   <div id="container">
     <header>
-      <h1>App Archive</h1>
+      <h1>♠♠ App Archive</h1>
       <h2>by <a href="https://moritzgauss.com">Moritz Gauss</a></h2>
     </header>
     <main>
